--- a/index.html
+++ b/index.html
@@ -1,19 +1,13 @@
-<html>
+<!DOCTYPE html>
+<html lang="es">
 <head>
-    <meta charset="UTFF-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <title>Calculadora</title>
 </head>
 <body>
-    <header>
-
-    </header>
-    <main>
-
-    </main>
-    <footer>
-
-    </footer>
+    <h1>Calculadora</h1>
+    <button onclick="iniciarCalculadora()">Iniciar Calculadora</button>
 
     <script src="funciones.js"></script>
 </body>
