--- a/index.html
+++ b/index.html
@@ -3,21 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculadora</title>
+    <title>Remgureton</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Calculadora</h1>
-    <input type="number" id="num1" placeholder="Número 1">
-    <select id="operacion">
-        <option value="+">Suma</option>
-        <option value="-">Resta</option>
-        <option value="*">Multiplicación</option>
-        <option value="/">División</option>
-    </select>
-    <input type="number" id="num2" placeholder="Número 2">
-    <button id="calcular">Calcular</button>
-    <p id="resultado"></p>
+    <header>
+        <h1>REMUGRETONCITO</h1>
+        <nav>
+            <ul>
+                <li><a href="#">INICIO</a></li>
+                <li><a href="#">PRODUCTOS</a></li>
+                <li><a href="#">CONTACTO</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section id="product-list">
+            <h2>Productos disponibles</h2>
+            <div class="product" data-price="5.99">
+            <h3>Lavandina</h3>
+            <span class="price">$5.99</span>
+            <div class="product" data-price="3.99"></div>
+            <h3>Perfumina</h3>
+            <span class="price">$3.99</span>
+            <div class="product" data-price="7.99"></div>
+            <h3>Jabon liquido</h3>
+            <span class="price">$7.99</span>
+            <button class="add-to-cart">Agregar al carrito</button>
+            </div>
+        </section>
 
-    <script src="calculadora.js"></script>
+        <section id="cart">
+            <h2>CARRITO</h2>
+            <ul id="cart-items"></ul>
+            <p id="total">Total: $0.00</p>
+            <button id="checkout">Comprar</button>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 REMUGRETONCITO</p>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
